--- a/products.html
+++ b/products.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/> 
     <meta name="description" content="80Teeth Products and Gunsmithing Services">
+    <link rel="icon" type="image/png" href="images/logo (4).png"/>
     <title>Our Products & Services - 80Teeth</title>
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css" crossorigin="anonymous"/>
