--- a/info.html
+++ b/info.html
@@ -63,6 +63,15 @@
            before taking possession of a firearm.</p>
     </section>
 
+    <section class="contact-section container fade-in">
+        <h2>Contact & Location</h2>
+        <p><strong>Phone:</strong> (205) 561-8429</p>
+        <p><strong>Address:</strong> 16046 Old Greensboro Rd Suite B, Moundville, AL 35474</p>
+        <p><strong>Store Hours:</strong></p>
+            <li>Monday - Friday: 9:00 AM - 6:00 PM</li>
+            <li>Saturday - Sunday: Closed</li>
+    </section>
+
     <footer class="footer fade-in">
         <div class="container footer-content">
             <p>&copy; <span id="year"></span> 80Teeth Firearms & Gunsmithing. All rights reserved.</p>
